<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/txtHeroName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/hrdina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/score"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgNorthWest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/northwest"
        app:layout_constraintBottom_toTopOf="@+id/img_west"
        app:layout_constraintEnd_toStartOf="@+id/imgNorth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDefence"
        app:srcCompat="@drawable/border" />

    <ImageView
        android:id="@+id/img_west"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/west"
        app:layout_constraintBottom_toTopOf="@+id/imgSouthWest"
        app:layout_constraintEnd_toStartOf="@+id/imgCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgNorthWest"
        app:srcCompat="@drawable/border" />

    <ImageView
        android:id="@+id/imgSouthWest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="264dp"
        android:contentDescription="@string/southwest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgSouth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_west"
        app:srcCompat="@drawable/border" />

    <ImageView
        android:id="@+id/imgNorth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/north"
        app:layout_constraintBottom_toTopOf="@+id/imgCenter"
        app:layout_constraintEnd_toStartOf="@+id/imgNorthEast"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/imgNorthWest"
        app:layout_constraintTop_toBottomOf="@+id/txtDefence"
        app:srcCompat="@drawable/border" />

    <ImageView
        android:id="@+id/imgCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/center"
        app:layout_constraintBottom_toTopOf="@id/imgSouth"
        app:layout_constraintEnd_toStartOf="@id/imgEast"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/img_west"
        app:layout_constraintTop_toBottomOf="@+id/imgNorth"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/border" />

    <ImageView
        android:id="@+id/imgSouth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="264dp"
        android:contentDescription="@string/south"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgSouthEast"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/imgSouthWest"
        app:layout_constraintTop_toBottomOf="@+id/imgCenter"
        app:srcCompat="@drawable/border" />

    <ImageView
        android:id="@+id/imgNorthEast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintBottom_toTopOf="@+id/imgEast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgNorth"
        app:layout_constraintTop_toBottomOf="@+id/txtDefence"
        app:srcCompat="@drawable/border"
        android:contentDescription="@string/northeast" />

    <ImageView
        android:id="@+id/imgEast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/east"
        app:layout_constraintBottom_toTopOf="@+id/imgSouthEast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgCenter"
        app:layout_constraintTop_toBottomOf="@+id/imgNorthEast"
        app:srcCompat="@drawable/border" />

    <ImageView
        android:id="@+id/imgSouthEast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="264dp"
        android:contentDescription="@string/southeast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgSouth"
        app:layout_constraintTop_toBottomOf="@+id/imgEast"
        app:srcCompat="@drawable/border" />

    <ImageView
        android:id="@+id/imgHealth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/health"
        app:layout_constraintBottom_toTopOf="@+id/txtHealth"
        app:layout_constraintEnd_toStartOf="@+id/imgAttack"
        app:layout_constraintTop_toBottomOf="@+id/txtHeroName"
        app:srcCompat="@drawable/heart" />

    <ImageView
        android:id="@+id/imgAttack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/attack"
        app:layout_constraintEnd_toStartOf="@+id/imgDefence"
        app:layout_constraintTop_toBottomOf="@+id/txtHeroName"
        app:srcCompat="@drawable/sword" />

    <ImageView
        android:id="@+id/imgDefence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/defence"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shield" />

    <ImageView
        android:id="@+id/imgHealing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="22dp"
        android:contentDescription="@string/healing"
        app:layout_constraintStart_toEndOf="@+id/imgDefence"
        app:layout_constraintTop_toBottomOf="@+id/txtScore"
        app:srcCompat="@drawable/medical" />

    <ImageView
        android:id="@+id/imgKilled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/kills"
        app:layout_constraintBottom_toTopOf="@+id/txtKilled"
        app:layout_constraintStart_toEndOf="@+id/imgHealing"
        app:layout_constraintTop_toBottomOf="@+id/txtScore"
        app:srcCompat="@drawable/rip" />

    <TextView
        android:id="@+id/txtHealth"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/health"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/txtAttack"
        app:layout_constraintTop_toBottomOf="@+id/imgHealth" />

    <TextView
        android:id="@+id/txtAttack"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/attack"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/txtDefence"
        app:layout_constraintTop_toBottomOf="@+id/imgAttack" />

    <TextView
        android:id="@+id/txtDefence"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/defence"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDefence" />

    <TextView
        android:id="@+id/txtKilled"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/kills"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/txtHealing"
        app:layout_constraintTop_toBottomOf="@+id/imgKilled" />

    <TextView
        android:id="@+id/txtHealing"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/healing"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/txtKilled"
        app:layout_constraintStart_toEndOf="@+id/txtDefence"
        app:layout_constraintTop_toBottomOf="@+id/imgHealing" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/logRecycler"
        android:layout_width="413dp"
        android:layout_height="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemsRecycler"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSouthWest" />

</androidx.constraintlayout.widget.ConstraintLayout>